src/Test/Fixtures/Good/TypeQualifier/scratchSingleQubitArray.lf
let scratch q: [qubit; 1] = qalloc(1);
