src/Test/Fixtures/Bad/BitQubit/unexpectedLiteralAfterMeasrBitArrayDeclaration.lf
let bs : [bit; 8] = measr(qs) 1;